[gd_scene load_steps=6 format=2]

[ext_resource path="res://player_objects/barge/barge_empty.glb" type="PackedScene" id=1]
[ext_resource path="res://player_objects/barge/Barge.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CylinderShape" id=2]
radius = 2.18419
height = 1.99823

[sub_resource type="BoxShape" id=3]
extents = Vector3( 3.90564, 3.63636, 1.92708 )

[node name="Barge" type="RigidBody" groups=[
"barges",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.14811, 0, 0 )
collision_layer = 3
collision_mask = 3
mass = 200.0
physics_material_override = SubResource( 1 )
linear_damp = 0.0
script = ExtResource( 2 )

[node name="barge_empty" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.98323, -0.287438, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.76849, -0.287438, 0 )
shape = SubResource( 2 )

[node name="content_detector" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.09711, 0 )
collision_layer = 2
collision_mask = 2

[node name="cargo_collisions" type="CollisionShape" parent="content_detector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.40479, 0 )
shape = SubResource( 3 )

[connection signal="body_entered" from="content_detector" to="." method="_on_content_detector_body_entered"]
[connection signal="body_exited" from="content_detector" to="." method="_on_content_detector_body_exited"]
